Added basic project compiling functionality. Added example project in src/tests/project1, with pre-created workspace.
Problems with "NextSiblingElement" in tinyXML2 during xml parsing.

--- a/NppExecPluginMsgTester_VC9x.vcxproj.filters
+++ b/NppExecPluginMsgTester_VC9x.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="src\core\SciMessager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tinyxml2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\xmltest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\base.h">
@@ -66,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\core\SciMessager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tinyxml2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
