--- a/NppExecPluginMsgTester_VC9x.vcxproj
+++ b/NppExecPluginMsgTester_VC9x.vcxproj
@@ -135,6 +135,8 @@
     <ClCompile Include="src\core\NppPlugin.cpp" />
     <ClCompile Include="src\core\NppPluginMenu.cpp" />
     <ClCompile Include="src\core\SciMessager.cpp" />
+    <ClCompile Include="src\tinyxml2.cpp" />
+    <ClCompile Include="src\xmltest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\base.h" />
@@ -147,6 +149,7 @@
     <ClInclude Include="src\core\NppPluginMenu.h" />
     <ClInclude Include="src\core\NppPluginMsgSender.h" />
     <ClInclude Include="src\core\SciMessager.h" />
+    <ClInclude Include="src\tinyxml2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
