--- a/resources/TaskList.rc
+++ b/resources/TaskList.rc
@@ -18,14 +18,17 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
 
 #include <windows.h>
+#include <afxres.h>
 #include "resource.h"
 
-IDD_PLUGINGOLINE_DEMO DIALOGEX 0, 0, 137, 283
+IDD_PLUGINGOLINE_DEMO DIALOGEX 0, 0, 120, 270
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Task List"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-	LISTBOX         ID_TODO_LIST,8,8,123,269, WS_VSCROLL | WS_TABSTOP | LBS_NOTIFY
+	LISTBOX         ID_TODO_LIST,48,78,100,190, WS_VSCROLL | WS_TABSTOP | LBS_NOTIFY
+	DEFPUSHBUTTON   "Remove", IDOK, 90, 447, 40, 15
+
 END
 
